--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <img src="https://i.postimg.cc/MK1D2Cbf/IMG-2499.jpg" alt="" width="50px">
+   <img src="https://i.postimg.cc/MK1D2Cbf/IMG-2499.jpg" alt="" >
 </body>
 </html>
