--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1 class="text1">Photography</h1><br>
   <h2 class="text2">by Songzhu Yang</h2><br><br><br><br><br>
   <p class="text3"> Using camera to record life,<br><br><br>
-    Reminding me life longtime ago.
+    which can remind me the life longtime ago.
   </p>
 <br><br>
     <div class="slideshow-container">          
